:bug: fix: loading的绝对最上层定位，目录的overflow滚动条

--- a/less/computer.less
+++ b/less/computer.less
@@ -67,6 +67,20 @@ a {
   background-color: var(--selection-color);
   color: var(--word-contrast-color);
 }
+*::-webkit-scrollbar-track {
+  /* -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3); */ /* border-radius:10px; */ /* background-color:#f5f5f5; */
+  border-radius: 0;
+  background-color: transparent !important;
+  -webkit-box-shadow: none !important;
+}
+*::-webkit-scrollbar {
+  background-color: transparent !important;
+  width: 10px;
+  height: 0;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--light-main-color) !important;
+}
 
 #home {
   @import url("header.less");
