--- a/less/loading.less
+++ b/less/loading.less
@@ -4,7 +4,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 101;
+  z-index: 1112;
   background-color: var(--back-color);
   opacity: 1;
   transition: opacity 1s;
